--- a/front/package.json
+++ b/front/package.json
@@ -14,12 +14,15 @@
     "next": "^15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "three": "^0.148.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-slick": "^0.23.13",
     "@types/three": "^0.171.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
