--- a/front/package.json
+++ b/front/package.json
@@ -14,7 +14,9 @@
     "framer-motion": "^11.16.1",
     "next": "^15.1.3",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.14.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "three": "^0.148.0"
