--- a/front/package.json
+++ b/front/package.json
@@ -30,6 +30,6 @@
     "@types/three": "^0.171.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "5.7.3"
   }
 }
