--- a/front/package.json
+++ b/front/package.json
@@ -20,7 +20,9 @@
     "react-intersection-observer": "^9.14.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
-    "three": "^0.148.0"
+    "three": "^0.148.0",
+    "react-datepicker": "^4.12.0",        
+    "date-fns": "^2.30.0"                 
   },
   "devDependencies": {
     "@types/node": "^20",
