--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19",
     "@types/react-slick": "^0.23.13",
     "@types/three": "^0.171.0",
