--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 PORT=3001
-DATABASE_URL="postgresql://postgres:44483-mm@db.pkumpxluuwvcytjuikte.supabase.co:5432/postgres"
+DATABASE_URL="postgresql://postgres:ocgisoMPuszOuQdjfKIFqsUiKACgZCtP@metro.proxy.rlwy.net:28537/railway"
 JWT_SECRET="unaClaveMuySegura"
-NEXT_PUBLIC_API_URL="https://la-herradura-n0nq94s5z-e-commerces-projects-7a8d629e.vercel.app"
+NEXT_PUBLIC_API_URL="https://la-herradura-flax.vercel.app/"
