--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ DATABASE_URL="postgresql://postgres:ocgisoMPuszOuQdjfKIFqsUiKACgZCtP@metro.proxy
 JWT_SECRET="unaClaveMuySegura"
 NEXT_PUBLIC_API_URL=http://localhost:3001
 NEXT_PUBLIC_API_URL=https://la-herradura-flax.vercel.app/
+VERCEL_URL=https://la-herradura-flax.vercel.app/
