creacion de server.ts

--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/back"
+      "dest": "/back/src/index.ts"
     },
     {
       "src": "/(.*)",
@@ -24,6 +24,6 @@
     "DATABASE_URL": "postgresql://postgres:ocgisoMPuszOuQdjfKIFqsUiKACgZCtP@metro.proxy.rlwy.net:28537/railway",
     "PORT": "3001",
     "JWT_SECRET": "unaClaveMuySegura",
-    "NEXT_PUBLIC_API_URL": "https://${VERCEL_URL}"
+    "NEXT_PUBLIC_API_URL": "https://${VERCEL_URL}/api"
   }
 }
