--- a/back/vercel.json
+++ b/back/vercel.json
@@ -1,20 +1,15 @@
 {
-    "name": "back",
-    "version": "1.0.0",
-    "scripts": {
-      "dev": "ts-node-dev src/index.ts",
-      "build": "tsc",
-      "start": "node dist/index.js"
-    },
-    "dependencies": {
-      "express": "^4.18.2",
-      "cors": "^2.8.5",
-      "prisma": "^6.3.0",
-      "pg": "^8.7.1"
-    },
-    "devDependencies": {
-      "typescript": "^5.0.4",
-      "ts-node-dev": "^2.0.0"
+  "version": 2,
+  "builds": [
+    {
+      "src": "dist/index.js",
+      "use": "@vercel/node"
     }
-  }
-  
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "dist/index.js"
+    }
+  ]
+}
