--- a/back/package.json
+++ b/back/package.json
@@ -1,12 +1,12 @@
 {
   "name": "back",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-     "start": "env $(cat .envproduction | xargs) node dist/index.js"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +21,6 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "prisma": "^6.3.0",
-    "railway": "^2.0.17",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   },
@@ -29,6 +28,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.8"
+    "@types/jsonwebtoken": "^9.0.8",
+    "@types/node": "^20.11.26"
   }
 }
