--- a/back/package.json
+++ b/back/package.json
@@ -22,13 +22,14 @@
     "pg": "^8.13.1",
     "prisma": "^6.3.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "undici-types": "^6.19.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
-    "@types/node": "^20.11.26"
+    "@types/node": "^20.17.22"
   }
 }
