--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,6 @@
 PORT=3001
 DATABASE_URL="postgresql://postgres:ocgisoMPuszOuQdjfKIFqsUiKACgZCtP@metro.proxy.rlwy.net:28537/railway"
 JWT_SECRET="unaClaveMuySegura"
-NEXT_PUBLIC_API_URL="https://la-herradura-flax.vercel.app/"
+NEXT_PUBLIC_API_URL="https://la-herradura-flax.vercel.app/api"
+
 VERCEL_URL=https://la-herradura-flax.vercel.app/
