--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 PORT=3001
-DATABASE_URL="postgresql://postgres:ocgisoMPuszOuQdjfKIFqsUiKACgZCtP@metro.proxy.rlwy.net:28537/railway"
+DATABASE_URL="postgresql://postgres:ocgisoMPuszOuQdjfKIFqsUiKACgZCtP@postgres.railway.internal:5432/railway"
 JWT_SECRET="unaClaveMuySegura"
 NEXT_PUBLIC_API_URL="https://la-herradura-production.up.railway.app"
 VERCEL_URL=https://la-herradura-flax.vercel.app/
