prueba de deploy

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "back/src/index.ts"
+      "dest": "back/src/server.ts"
     },
     {
       "src": "/(.*)",
