--- a/.env.production
+++ b/.env.production
@@ -3,4 +3,4 @@ PORT=3001
 JWT_SECRET="unaClaveMuySegura"
 NEXT_PUBLIC_API_URL="https://la-herradura-production.up.railway.app"
 VERCEL_URL=https://la-herradura-flax.vercel.app/
-DATABASE_PUBLIC_URL="postgresql://postgres:ocgisoMPuszOuQdjfKIFqsUiKACgZCtP@metro.proxy.rlwy.net:28537/railway"
+DATABASE_URL="postgresql://postgres:ocgisoMPuszOuQdjfKIFqsUiKACgZCtP@postgres.railway.internal:5432/railway"
