--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
 
 PORT=3001
-#DATABASE_URL="postgresql://postgres:ocgisoMPuszOuQdjfKIFqsUiKACgZCtP@metro.proxy.rlwy.net:28537/railway"
 #DATABASE_URL="postgresql://postgres:44483-mm@localhost:5432/my_database"
 JWT_SECRET="unaClaveMuySegura"
 NEXT_PUBLIC_API_URL=https://la-herradura-flax.vercel.app/
-DATABASE_PUBLIC_URL = "postgresql://postgres:ocgisoMPuszOuQdjfKIFqsUiKACgZCtP@metro.proxy.rlwy.net:28537/railway"
+DATABASE_PUBLIC_URL ="postgresql://postgres:CPrJfZlJuxPJlWyNuDSdClIyUFiKwkhF@gondola.proxy.rlwy.net:49919/railway"
