--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 PORT=3001
 JWT_SECRET="unaClaveMuySegura"
-NEXT_PUBLIC_API_URL="https://la-herradura-production.up.railway.app"
+NEXT_PUBLIC_API_URL="https://postgres-production-cad4.up.railway.app/"
 VERCEL_URL=https://la-herradura-flax.vercel.app/
-DATABASE_PUBLIC_URL="postgresql://postgres:ocgisoMPuszOuQdjfKIFqsUiKACgZCtP@metro.proxy.rlwy.net:28537/railway"
+DATABASE_PUBLIC_URL="postgresql://postgres:CPrJfZlJuxPJlWyNuDSdClIyUFiKwkhF@gondola.proxy.rlwy.net:49919/railway"
