--- a/back/package.json
+++ b/back/package.json
@@ -30,6 +30,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
-    "@types/node": "^20.17.22"
+    "@types/node": "^20.17.22",
+    "@types/pg": "^8.11.11"
   }
 }
