--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-   "build": "tsc && prisma generate",
+    "build": "tsc && prisma generate",
     "start": "node dist/server.js",
     "postinstall": "npm run build"
   },
@@ -14,14 +14,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^6.3.0",
+    "@prisma/client": "^6.5.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
-    "prisma": "^6.3.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3",
     "undici-types": "^6.19.8"
@@ -32,6 +31,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^20.17.22",
-    "@types/pg": "^8.11.11"
+    "@types/pg": "^8.11.11",
+    "prisma": "^6.5.0"
   }
 }
