--- a/back/package.json
+++ b/back/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc && prisma generate",
-    "start": "node dist/server.js",
+    "start": "node ./dist/server.js",
     "postinstall": "npm run build"
   },
   "keywords": [],
