--- a/back/package.json
+++ b/back/package.json
@@ -2,13 +2,12 @@
   "name": "back",
   "version": "1.0.0",
   "main": "dist/server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "build": "tsc && prisma generate",
-    "start": "node ./dist/server.js",
-    "postinstall": "npm run build"
-  },
+"scripts": {
+  "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+  "build": "tsc",
+  "start": "node dist/server.js",
+  "postinstall": "npm run build"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
